--- a/view/css/estilo.css
+++ b/view/css/estilo.css
@@ -4,6 +4,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a{
+    text-decoration: none;
+    color: white;
+}
+
 body{
     background-color: rgb(24, 24, 24);
 }
@@ -49,7 +54,7 @@ header > nav > ul >li{
 .conta{
     width: 25%;
     max-width: 400px;
-    height: 85vh;
+    height: 90vh;
     background-color: rgb(58, 58, 58);
     position: fixed;
     right: 0px;
