--- a/view/css/estilo-form.css
+++ b/view/css/estilo-form.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 body{text-align: center;}
@@ -51,6 +52,7 @@ input, select{
     padding: 5px;
     transition: 0.2s;
     border-color: black;
+    color: black;
 }
 
 input:hover, select:hover{
