Adicionado telas de alterações

--- a/view/sass/styleHome.sass
+++ b/view/sass/styleHome.sass
@@ -45,7 +45,7 @@ header
     position: fixed
     top: 0
     right: 100px
-    background-color: variables.$secundary-color
+    background-color: variables.$primary-color
     border-radius: 0px 0px 20px 20px
     transform: translateY(-97vh)
     transition: 0.3s
@@ -54,7 +54,7 @@ header
     align-items: center
     &:hover
         transform: translateY(-5vh)
-        @include mixins.box-hover(variables.$primary-color)
+        @include mixins.box-hover(variables.$secundary-color)
     h2
         text-align: center
         margin-top: 20px
