--- a/view/css/style-home.css
+++ b/view/css/style-home.css
@@ -54,7 +54,7 @@ header ul li a:hover {
   position: fixed;
   top: 0;
   right: 100px;
-  background-color: #d47800;
+  background-color: blue;
   border-radius: 0px 0px 20px 20px;
   transform: translateY(-97vh);
   transition: 0.3s;
@@ -64,7 +64,7 @@ header ul li a:hover {
 }
 .config:hover {
   transform: translateY(-5vh);
-  box-shadow: 0px 0px 10px 5px blue;
+  box-shadow: 0px 0px 10px 5px #d47800;
 }
 .config h2 {
   text-align: center;
