--- a/view/css/style-change.css
+++ b/view/css/style-change.css
@@ -27,7 +27,13 @@ form #submit-btn {
 }
 form #submit-btn:hover {
   border-radius: 40px;
-  transform: scale(1.15);
+  transform: scale(1.05);
+}
+
+.return-forms {
+  font-size: 24px;
+  text-align: center;
+  margin-top: 50px;
 }
 
 /*# sourceMappingURL=style-change.css.map */
