--- a/view/sass/styleChange.sass
+++ b/view/sass/styleChange.sass
@@ -26,6 +26,12 @@ form
         margin-right: auto
         &:hover
             border-radius: 40px
-            transform: scale(1.15)
+            transform: scale(1.05)
+
+.return-forms
+    font-size: 24px
+    text-align: center
+    margin-top: 50px
+
 
         
